@@ -1,0 +1,30 @@
+<div class="prototype">
+  $Tvoid@ $CBunny@::$SSetContext@($Kconst@ $CBunny@::$TContext@_derivate &$Scontext@);
+</div>
+<hr />
+
+<div class="resume">
+  <h3>Description</h3>
+  $A Set the sent $CBunny@::$TContent@ as context.
+  <br />
+  A C version, bunny_set_context is available in the event module.
+</div>
+<hr />
+
+<div class="parameters">
+  <h3>Parameters</h3>
+  <ul>
+    <li>
+      $Kconst@ $CBunny@::$TContext@ &$Scontext@:<br />
+      $A The context to set to the bunny loop
+    </li>
+  </ul>
+</div>
+
+<div class="related_functions">
+  <h3>Related functions</h3>
+  <ul>
+    <li>Bunny::Context</li>
+  </ul>
+</div>
+
